[Fixes #32768431] Fixed column width in table and removed extra white space

--- a/css/main.css
+++ b/css/main.css
@@ -471,6 +471,12 @@
     padding: 0;
 }
 
+.pg-ide .pg-table .ui-state-default {
+    border-left: 0;
+    border-top: 0;
+    border-bottom: 0;
+}
+
 @keyframes progressbg
 {
     0%   {background-position: 0 0;}
